# hammer

./: .gitignore  CLAUDE.md  CLAUDI.md  CODE_REVIEW.md  CONTRIBUTING.md  GEMINI.md  NORMALIZATION_MODEL_AND EXEC_PLAN_BUILDER.md  PHASE7_STATUS.md  PYDANTIC_MODEL_SET.md  README.md  REMAINING_ITEMS.md  REQUIREMENTS.md  SPEC_SCHEMA.md  pyproject.toml
docs/: CODE_REVIEW_REPORT.md  DEBUG_OUTPUT_PLAN.md  E2E_TEST_ANALYSIS.md  HOST_HTTP_TESTING_PLAN.md  QUICKSTART.md  TROUBLESHOOTING.md
docs/planning/: HAMMER_INIT_PLAN.md  IMPLEMENTATION_ROADMAP.md  PHASE_1_DETAILED.md  PHASE_2_DETAILED.md  PHASE_4_DETAILED.md  PHASE_5_DETAILED.md
docs/user-guide/: README.md  cli-reference.md  creating-specs.md  getting-started.md
real_examples/PE1/: ASSIGNMENT_PE1.md  HAMMER_GAP_ANALYSIS.md  app.py  aws_hosts.ini  playbook.yaml  playbook_extra3.yaml  playbook_solution.yaml  spec.yaml
real_examples/PE2/: HAMMER_GAP_ANALYSIS.md  HAMMER_IMPLEMENTATION_PLAN.md  README.md  Vagrantfile  deploy.sh  inventory.ini  playbook.yml  playbook_common.yml  playbook_conditionals.yml  playbook_loops.yml  playbook_retries.yml  playbook_vault.yml  run_ansible.sh  spec.yaml
real_examples/PE3/: HAMMER_GAP_ANALYSIS.md  README.md  Vagrantfile  clean_known_hosts.sh  deploy.sh  inventory.ini  nginx.conf  playbook_solution.yml  run_ansible.sh  spec.yaml
real_examples/PE4/: HAMMER_GAP_ANALYSIS.md  README.md  check_config.sh  create_voornaam_achternaam.sh  deploy.sh  first_run.txt  motd  nuke_all_vms.sh  package_exam.sh  playbook.yml  run_ansible.sh  spec.yaml
src/hammer/: cli.py  (+7 more)
tests/: conftest.py
(+82 files in other folders)
